--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,11 @@ name = "pypi"
 [packages]
 pygame = "*"
 flask = "*"
+sqlalchemy = "*"
+flask-cors = "*"
+flask-migrate = "*"
+requests = "*"
+pygame-textinput = "*"
 
 [dev-packages]
 
